# weight-wb

./: .gitignore  Cargo.toml  README.md  db.sqlite
src/: lib.rs  main.rs
src/db/: mod.rs
src/printer/: attach.rs  io.rs  label.rs  mod.rs  model.rs  print.rs  status.rs  usb.rs
src/ui/: dialog_chunk.rs  message_chunk.rs  mod.rs  product_chunk.rs  sale_chunk.rs  status_chunk.rs
src/voucher/: img.rs  mod.rs  text.rs
src/weight/: mod.rs
