[package]
name = "weight-wb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.1.0"
chrono = "0.4.24"
cosmic-text = "0.8.0"
crossterm = "0.26.1"
image = { version = "0.24.6", default-features = false, features = ["png"] }
rusb = "0.9.2"
rusqlite = "0.29.0"
serialport = "4.2.0"
tui = "0.19.0"
