[package]
name = "weight-wb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
chrono = "0.4.37"
cosmic-text = "0.11.2"
crossterm = "0.27.0"
image = { version = "0.25.1", default-features = false, features = ["png"] }
rusb = "0.9.3"
rusqlite = "0.31.0"
serialport = "4.3.0"
tui = "0.19.0"
